--- a/.env
+++ b/.env
@@ -1,10 +1,5 @@
 #VARIAVEIS DE AMBIENTE
-
-EMAIL=postman19621@outlook.com
-PASSWORD=GH55#U88 
-
-#provedor de email
-SMTP_SERVER=smtp.office365.com 
-
-#starttls -- criptografia TLS
-SMTP_PORT=587 
+# 
+EMAIL=automatorbotmailman@gmail.com
+# EMAIL_PASSWORD=GH55#U88 
+EMAIL_PASSWORD=bevs tiqa lwfk dobm 
